--- a/chat.ipynb
+++ b/chat.ipynb
@@ -2,20 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "73d5cc26-856b-4167-8267-438639a3b72f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'FOLDER_ID' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 35\u001b[0m\n\u001b[0;32m     32\u001b[0m         \u001b[38;5;28mprint\u001b[39m(alternative)\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 35\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[1], line 22\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mmain\u001b[39m():\n\u001b[0;32m     21\u001b[0m     sdk \u001b[38;5;241m=\u001b[39m YCloudML(\n\u001b[1;32m---> 22\u001b[0m         folder_id\u001b[38;5;241m=\u001b[39m\u001b[43mFOLDER_ID\u001b[49m,\n\u001b[0;32m     23\u001b[0m         auth\u001b[38;5;241m=\u001b[39mIAMTokenAuth(YC_IAM_TOKEN),\n\u001b[0;32m     24\u001b[0m         enable_server_data_logging\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     25\u001b[0m     )\n\u001b[0;32m     27\u001b[0m     result \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m     28\u001b[0m         sdk\u001b[38;5;241m.\u001b[39mmodels\u001b[38;5;241m.\u001b[39mcompletions(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myandexgpt-lite\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mconfigure(temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.6\u001b[39m)\u001b[38;5;241m.\u001b[39mrun(messages)\n\u001b[0;32m     29\u001b[0m     )\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m alternative \u001b[38;5;129;01min\u001b[39;00m result:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'FOLDER_ID' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alternative(role='assistant', text='Альберт Эйнштейн внёс значительный вклад в развитие физики. Он наиболее известен своими работами в области теоретической физики, особенно в области специальной и общей теории относительности.\\n\\nКроме того, Эйнштейн сделал важные открытия в квантовой теории, статистической физике и броуновском движении. Также он внёс вклад в развитие теории фотоэффекта и квантовой теплоёмкости.', status=<AlternativeStatus.FINAL: 3>, tool_calls=None)\n"
      ]
     }
    ],
@@ -28,7 +23,7 @@
     "\n",
     "dotenv.load_dotenv()\n",
     "\n",
-    "\n",
+    "config = dotenv.dotenv_values()\n",
     "\n",
     "messages = [\n",
     "    {\n",
@@ -43,8 +38,8 @@
     "\n",
     "def main():\n",
     "    sdk = YCloudML(\n",
-    "        folder_id=FOLDER_ID,\n",
-    "        auth=IAMTokenAuth(YC_IAM_TOKEN),\n",
+    "        folder_id=config[\"FOLDER_ID\"],\n",
+    "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
     "        enable_server_data_logging=False,\n",
     "    )\n",
     "\n",
@@ -89,6 +84,12 @@
     "from yandex_cloud_ml_sdk import YCloudML\n",
     "from yandex_cloud_ml_sdk.auth import IAMTokenAuth\n",
     "\n",
+    "import dotenv, os\n",
+    "\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "config = dotenv.dotenv_values()\n",
+    "\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"text\": \"Найди ошибки в тексте и исправь их\"},\n",
     "    {\"role\": \"user\", \"text\": \"Ашипки саме сибя ни исрпвят.\"},\n",
@@ -97,8 +98,8 @@
     "\n",
     "def main():\n",
     "    sdk = YCloudML(\n",
-    "        folder_id=\"b1g5t9rqg85fvc523apg\",\n",
-    "        auth=IAMTokenAuth(''),\n",
+    "        folder_id=config[\"FOLDER_ID\"],\n",
+    "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
     "        enable_server_data_logging=False,\n",
     "    )\n",
     "\n",
@@ -135,6 +136,12 @@
     "from yandex_cloud_ml_sdk import YCloudML\n",
     "from yandex_cloud_ml_sdk.auth import IAMTokenAuth\n",
     "\n",
+    "import dotenv, os\n",
+    "\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "config = dotenv.dotenv_values()\n",
+    "\n",
     "messages_1 = [\n",
     "    {\n",
     "        \"role\": \"system\",\n",
@@ -158,8 +165,8 @@
     "def main():\n",
     "\n",
     "    sdk = YCloudML(\n",
-    "        folder_id=\"b1g5t9rqg85fvc523apg\",\n",
-    "        auth=IAMTokenAuth(''),\n",
+    "        folder_id=config[\"FOLDER_ID\"],\n",
+    "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
     "        enable_server_data_logging=False,\n",
     "    )\n",
     "\n",
