Добавил пример тулзы без аргументов в function_calling; Добавил dotenv в function_calling и  tokenize

--- a/chat.ipynb
+++ b/chat.ipynb
@@ -17,69 +17,112 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      ">  Как мне написать интерфейс для чата с LLM на ipywidgets?\n"
+      ">  Какая погода была в Москве 12 Мая 2025 года?\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "YaGPT> Для создания интерфейса чата с LLM на ipywidgets вам потребуется выполнить следующие шаги:\n",
-      "\n",
-      "1. **Импортировать необходимые модули:**\n",
-      "   ```\n",
-      "   import ipywidgets as widgets\n",
-      "   from IPython.display import display\n",
-      "   ```\n",
-      "\n",
-      "2. **Создать виджет ввода текста для пользователя:**\n",
-      "   ```\n",
-      "   user_input = widgets.TextInput(placeholder='Введите ваш вопрос или сообщение')\n",
-      "   display(user_input)\n",
-      "   ```\n",
-      "\n",
-      "3. **Создать кнопку для отправки сообщения:**\n",
-      "   ```\n",
-      "   send_button = widgets.Button(description='Отправить')\n",
-      "   display(send_button)\n",
-      "   ```\n",
-      "\n",
-      "4. **Добавить обработчик события для кнопки:**\n",
-      "   ```\n",
-      "   def on_send_button_click(button):\n",
-      "       # Получаем текст из виджета ввода\n",
-      "       message = user_input.value\n",
-      "       # Отправляем сообщение LLM\n",
-      "       # ... ваш код для отправки сообщения LLM ...\n",
-      "   ```\n",
-      "\n",
-      "5. **Подключить обработчик к кнопке:**\n",
-      "   ```\n",
-      "   send_button.on_click(on_send_button_click)\n",
-      "   ```\n",
-      "\n",
-      "6. **Создать виджет для отображения ответа от LLM:**\n",
-      "   ```\n",
-      "   llms_response = widgets.Textarea(placeholder='Ответ от LLM')\n",
-      "   display(llms_response)\n",
-      "   ```\n",
-      "\n",
-      "7. **Обновить виджет с ответом при получении ответа от LLM:**\n",
-      "   ```\n",
-      "   def update_response(response):\n",
-      "       llms_response.value = response\n",
-      "   ```\n",
-      "\n",
-      "8. **Настроить цикл получения ответов от LLM:**\n",
-      "   ```\n",
-      "   # Ваш код для получения ответов от LLM здесь\n",
-      "   while True:\n",
-      "       response = get_llm_response()\n",
-      "       update_response(response)\n",
-      "   time.sleep(1)\n",
-      "   ```\n",
-      "\n",
-      "Это базовый пример, который можно расширить и настроить под ваши конкретные потребности. Например, вы можете добавить возможность выбора модели LLM, настройку параметров запроса и т. д.\n"
+      "YaGPT> Я не могу предоставить информацию о погоде в конкретный день в будущем, так как у меня нет доступа к данным о погоде наперёд. Чтобы узнать погоду в Москве 12 мая 2025 года, вам нужно будет проверить прогноз погоды ближе к этой дате.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  Какая погода была в Москве 12 Мая 2021 года?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YaGPT> К сожалению, я не могу предоставить информацию о погоде в Москве на конкретные даты в 2021 и 2025 годах, так как у меня нет доступа к историческим данным о погоде. Рекомендую обратиться к архивным источникам или специализированным сервисам для получения более точной информации.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  Какая погода была в Москве 12 Мая 2010 года?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YaGPT> По данным различных источников, 12 мая 2010 года в Москве была тёплая погода. Температура воздуха достигала +23 °C.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  Какая погода была в Москве 12 Мая 2015 года?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YaGPT> По данным различных источников, 12 мая 2015 года в Москве было облачно с прояснениями. Температура воздуха достигала +23 °C.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  Какая погода была в Москве 12 Мая 2017 года?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YaGPT> По данным различных источников, 12 мая 2017 года в Москве было облачно с прояснениями. Температура воздуха достигала +18 °C.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  Какая погода была в Москве 12 Мая 2021 года?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YaGPT> По данным различных источников, 12 мая 2021 года в Москве была переменная облачность. Температура воздуха достигала +19 °C.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  Какая погода была в Москве 12 Мая 2025 года?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YaGPT> К сожалению, у меня нет информации о погоде в Москве на 12 мая 2025 года.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  Какая погода была в Москве 12 Мая 2024 года?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YaGPT> По данным различных источников, 12 мая 2024 года в Москве была переменная облачность. Температура воздуха достигала +21 °C.\n"
      ]
     }
    ],
@@ -97,7 +140,7 @@
     "messages = [\n",
     "    {\n",
     "        \"role\": \"system\",\n",
-    "        \"text\": \"Ты программист Python, хорошо знающий ipywidgets\",\n",
+    "        \"text\": \"Отвечай на вопрос максимально правдиво\",\n",
     "    },\n",
     "]\n",
     "\n",
@@ -108,7 +151,7 @@
     "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
     "        enable_server_data_logging=False,\n",
     "    )\n",
-    "    model = sdk.models.completions(\"yandexgpt-lite\").configure(temperature=0.6)\n",
+    "    model = sdk.models.completions(\"yandexgpt\").configure(temperature=0)\n",
     "    print(\"Начало чата:\")\n",
     "\n",
     "    msg_text = input(\"> \")\n",
