--- a/function_calling.ipynb
+++ b/function_calling.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "1a529ef6-5364-4c74-96a9-fe24cc4167d1",
    "metadata": {},
    "outputs": [
@@ -22,8 +22,9 @@
      "text": [
       "ответ калькулятора expression='5@-1'\n",
       "Ответ модели на вопрос Сколько будет 5@-1?: Результат выражения 5@-1 равен -5.\n",
-      "функция погоды вернула location='Москва' и date='12 Мая 2025'\n",
-      "Ответ модели на вопрос Какая погода была в Москве 12 Мая 2025 года?: 12 мая 2025 года в Москве было -12 градусов тепла.\n"
+      "функция погоды вернула location='Москва' и date='12 мая 2025 года'\n",
+      "Ответ модели на вопрос Какая погода была в Москве 12 Мая 2025 года?: 12 мая 2025 года в Москве было -12 градусов тепла.\n",
+      "Ответ модели на вопрос Какое сейчас локальное время?: Сейчас локальное время: 16:19:32.\n"
      ]
     }
    ],
@@ -33,6 +34,13 @@
     "from yandex_cloud_ml_sdk import YCloudML\n",
     "from yandex_cloud_ml_sdk.auth import IAMTokenAuth\n",
     "\n",
+    "import dotenv, os\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "config = dotenv.dotenv_values()\n",
     "\n",
     "def calculator(expression: str) -> str:\n",
     "    print(f'ответ калькулятора {expression=}')\n",
@@ -43,6 +51,9 @@
     "    print(f\"функция погоды вернула {location=} и {date=}\")\n",
     "    return \"-12 градусов тепла\"\n",
     "\n",
+    "def local_time() -> str:\n",
+    "    ans = time.strftime('%d.%m.%Y г. %H:%M:%S', time.localtime())\n",
+    "    return ans\n",
     "\n",
     "def process_tool_calls(tool_calls) -> dict[str, list[dict]]:\n",
     "    \"\"\"\n",
@@ -51,7 +62,8 @@
     "\n",
     "    function_map = {\n",
     "        'calculator': calculator,\n",
-    "        'Weather': weather\n",
+    "        'Weather': weather,\n",
+    "        'LocalTime':local_time\n",
     "    }\n",
     "\n",
     "    result = []\n",
@@ -70,9 +82,10 @@
     "\n",
     "def main() -> None:\n",
     "    sdk = YCloudML(\n",
-    "        folder_id=\"b1g5t9rqg85fvc523apg\",\n",
-    "        auth=IAMTokenAuth('t1.9euelZqRm8uLjsiRmJTPnJKXzIuWnO3rnpWalI2YnMzOls-XyZ7HnsrGzpXl9PcGPHE--e9VemfE3fT3RmpuPvnvVXpnxM3n9euelZqOlMyLnInHzo2Li5zIjJOZyu_8zef1656VmpiWlJeXlJydy8zNiZacl5vG7_3F656Vmo6UzIucicfOjYuLnMiMk5nK.udOrDKUDZHGAzdLiyIjZqDNvLsgouvywTyO6HrW2e-9qVGMa9P5s7qg2x68Fc5Xb1O7XiJaVUnPnJ3vlUrBlBg'),\n",
-    "        enable_server_data_logging=False,)\n",
+    "        folder_id=config[\"FOLDER_ID\"],\n",
+    "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
+    "        enable_server_data_logging=False,\n",
+    "    )\n",
     "\n",
     "    calculator_tool = sdk.tools.function(\n",
     "        name=\"calculator\",\n",
@@ -104,13 +117,19 @@
     "    # также можно передать в качестве параметров модель pydantic; в таком случае jsonschema будет извлечена из переданной модели\n",
     "    weather_tool = sdk.tools.function(Weather)\n",
     "\n",
+    "    class LocalTime(BaseModel):\n",
+    "        \"\"\"Получение локального времени на компьютере\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    time_tool = sdk.tools.function(LocalTime)\n",
+    "\n",
     "    model = sdk.models.completions('yandexgpt')\n",
     "\n",
     "    # tools must be bound to model object via .configure method and would be used in all\n",
     "    # model calls from this model object.\n",
-    "    model = model.configure(tools=[calculator_tool, weather_tool], temperature=0)\n",
+    "    model = model.configure(tools=[calculator_tool, weather_tool, time_tool], temperature=0)\n",
     "\n",
-    "    for question in [\"Сколько будет 5@-1?\", \"Какая погода была в Москве 12 Мая 2025 года?\"]:\n",
+    "    for question in [\"Сколько будет 5@-1?\", \"Какая погода была в Москве 12 Мая 2025 года?\", \"Какое сейчас локальное время?\"]:\n",
     "        # необходимо тщательно и аккуратно сохранять контекст для передачи результатов функций для модели после вызова функции \n",
     "        messages: list = [\n",
     "            {\"role\": \"system\", \"text\": \"Используй русский язык в ответах\"},\n",
@@ -167,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
