--- a/tokenize.ipynb
+++ b/tokenize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a173153d-2eac-4713-9873-4ff40c1e71d6",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Token(id=1, special=True, text='<s>')\n",
-      "Token(id=16861, special=False, text='▁Пользователь')\n",
-      "Token(id=125851, special=False, text=':')\n",
-      "Token(id=33687, special=False, text='▁foo')\n",
-      "Token(id=3, special=True, text='[NL]')\n",
-      "Token(id=3, special=True, text='[NL]')\n",
-      "Token(id=125904, special=False, text='А')\n",
-      "Token(id=845, special=False, text='сси')\n",
-      "Token(id=57590, special=False, text='стент')\n",
-      "Token(id=125851, special=False, text=':')\n",
-      "Token(id=4, special=True, text='[SEP]')\n"
+      "Token(id=128000, special=False, text='')\n",
+      "Token(id=128006, special=False, text='')\n",
+      "Token(id=882, special=False, text='')\n",
+      "Token(id=128007, special=False, text='')\n",
+      "Token(id=271, special=False, text='')\n",
+      "Token(id=35095, special=False, text='')\n",
+      "Token(id=4655, special=False, text='')\n",
+      "Token(id=94508, special=False, text='')\n",
+      "Token(id=35111, special=False, text='')\n",
+      "Token(id=13325, special=False, text='')\n",
+      "Token(id=11, special=False, text='')\n",
+      "Token(id=109085, special=False, text='')\n",
+      "Token(id=101515, special=False, text='')\n",
+      "Token(id=107834, special=False, text='')\n",
+      "Token(id=6125, special=False, text='')\n",
+      "Token(id=88, special=False, text='')\n",
+      "Token(id=30919, special=False, text='')\n",
+      "Token(id=128009, special=False, text='')\n",
+      "Token(id=128006, special=False, text='')\n",
+      "Token(id=78191, special=False, text='')\n",
+      "Token(id=128007, special=False, text='')\n",
+      "Token(id=271, special=False, text='')\n"
      ]
     }
    ],
@@ -30,16 +41,20 @@
     "from yandex_cloud_ml_sdk import YCloudML\n",
     "from yandex_cloud_ml_sdk.auth import IAMTokenAuth\n",
     "\n",
+    "import dotenv, os\n",
+    "dotenv.load_dotenv()\n",
+    "config = dotenv.dotenv_values()\n",
+    "\n",
     "def main() -> None:\n",
     "    sdk = YCloudML(\n",
-    "        folder_id=\"b1g5t9rqg85fvc523apg\",\n",
-    "        auth=IAMTokenAuth('t1.9euelZqRm8uLjsiRmJTPnJKXzIuWnO3rnpWalI2YnMzOls-XyZ7HnsrGzpXl9PcGPHE--e9VemfE3fT3RmpuPvnvVXpnxM3n9euelZqOlMyLnInHzo2Li5zIjJOZyu_8zef1656VmpiWlJeXlJydy8zNiZacl5vG7_3F656Vmo6UzIucicfOjYuLnMiMk5nK.udOrDKUDZHGAzdLiyIjZqDNvLsgouvywTyO6HrW2e-9qVGMa9P5s7qg2x68Fc5Xb1O7XiJaVUnPnJ3vlUrBlBg'),\n",
+    "        folder_id=config[\"FOLDER_ID\"],\n",
+    "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
     "        enable_server_data_logging=False,\n",
     "    )\n",
     "\n",
-    "    model = sdk.models.completions('yandexgpt')\n",
+    "    model = sdk.models.completions('yandexgpt-lite')\n",
     "\n",
-    "    result = model.tokenize(\"foo\")\n",
+    "    result = model.tokenize(\"Ты программист Python, хорошо знающий ipywidgets\")\n",
     "\n",
     "    for token in result:\n",
     "        print(token)\n",
@@ -55,7 +70,51 @@
    "id": "5710973e-f00c-4da0-8080-059a3f27b5d6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Token(id=1, special=True, text='<s>')\n",
+    "Token(id=16861, special=False, text='▁Пользователь')\n",
+    "Token(id=125851, special=False, text=':')\n",
+    "Token(id=7624, special=False, text='▁Ты')\n",
+    "Token(id=21358, special=False, text='▁программи')\n",
+    "Token(id=269, special=False, text='ст')\n",
+    "Token(id=14333, special=False, text='▁Python')\n",
+    "Token(id=125827, special=False, text=',')\n",
+    "Token(id=3708, special=False, text='▁хорошо')\n",
+    "Token(id=115136, special=False, text='▁знающий')\n",
+    "Token(id=17019, special=False, text='▁ip')\n",
+    "Token(id=125836, special=False, text='y')\n",
+    "Token(id=54970, special=False, text='widgets')\n",
+    "Token(id=3, special=True, text='[NL]')\n",
+    "Token(id=3, special=True, text='[NL]')\n",
+    "Token(id=125904, special=False, text='А')\n",
+    "Token(id=845, special=False, text='сси')\n",
+    "Token(id=57590, special=False, text='стент')\n",
+    "Token(id=125851, special=False, text=':')\n",
+    "Token(id=4, special=True, text='[SEP]')\n",
+    "\n",
+    "Token(id=128000, special=False, text='')\n",
+    "Token(id=128006, special=False, text='')\n",
+    "Token(id=882, special=False, text='')\n",
+    "Token(id=128007, special=False, text='')\n",
+    "Token(id=271, special=False, text='')\n",
+    "Token(id=35095, special=False, text='')\n",
+    "Token(id=4655, special=False, text='')\n",
+    "Token(id=94508, special=False, text='')\n",
+    "Token(id=35111, special=False, text='')\n",
+    "Token(id=13325, special=False, text='')\n",
+    "Token(id=11, special=False, text='')\n",
+    "Token(id=109085, special=False, text='')\n",
+    "Token(id=101515, special=False, text='')\n",
+    "Token(id=107834, special=False, text='')\n",
+    "Token(id=6125, special=False, text='')\n",
+    "Token(id=88, special=False, text='')\n",
+    "Token(id=30919, special=False, text='')\n",
+    "Token(id=128009, special=False, text='')\n",
+    "Token(id=128006, special=False, text='')\n",
+    "Token(id=78191, special=False, text='')\n",
+    "Token(id=128007, special=False, text='')\n",
+    "Token(id=271, special=False, text='')"
+   ]
   }
  ],
  "metadata": {
@@ -74,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
