--- a/chat.ipynb
+++ b/chat.ipynb
@@ -147,7 +147,7 @@
     "\n",
     "def main():\n",
     "    sdk = YCloudML(\n",
-    "        folder_id=config[\"FOLDER_ID\"],\n",
+    "        folder_id=config[\"YC_FOLDER_ID\"],\n",
     "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
     "        enable_server_data_logging=False,\n",
     "    )\n",
@@ -226,7 +226,7 @@
     "\n",
     "def main():\n",
     "    sdk = YCloudML(\n",
-    "        folder_id=config[\"FOLDER_ID\"],\n",
+    "        folder_id=config[\"YC_FOLDER_ID\"],\n",
     "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
     "        enable_server_data_logging=False,\n",
     "    )\n",
@@ -307,7 +307,7 @@
     "def main():\n",
     "\n",
     "    sdk = YCloudML(\n",
-    "        folder_id=config[\"FOLDER_ID\"],\n",
+    "        folder_id=config[\"YC_FOLDER_ID\"],\n",
     "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
     "        enable_server_data_logging=False,\n",
     "    )\n",
@@ -367,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
