--- a/function_calling.ipynb
+++ b/function_calling.ipynb
@@ -63,7 +63,7 @@
     "    function_map = {\n",
     "        'calculator': calculator,\n",
     "        'Weather': weather,\n",
-    "        'LocalTime':local_time\n",
+    "        'LocalTime': local_time\n",
     "    }\n",
     "\n",
     "    result = []\n",
@@ -82,7 +82,7 @@
     "\n",
     "def main() -> None:\n",
     "    sdk = YCloudML(\n",
-    "        folder_id=config[\"FOLDER_ID\"],\n",
+    "        folder_id=config[\"YC_FOLDER_ID\"],\n",
     "        auth=IAMTokenAuth(config[\"YC_IAM_TOKEN\"]),\n",
     "        enable_server_data_logging=False,\n",
     "    )\n",
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
